# automatic-openconnect

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  dev.ps1  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release-posix.yml  tests.yml
docs/: authenticator-setup.md  developer.md  index.md  requirements.txt  security.md  totp-hotkey.md  troubleshooting.md  usage.md
docs/installation/: linux.md  macos.md  windows.md
docs/superpowers/specs/: 2026-06-02-standalone-vpn-app-design.md
packaging/: automatic-vpn.spec  entry.py  posix_entry.py
scripts/: gen_backgrounds.py  live_robustness_test.py  theme_smoke.py
src/automatic_openconnect/: __init__.py  __main__.py  _darwin.py  _diag.py  _linux.py  _posix_tray.py  _windows.py  autostart.py  config.py  core.py  factory.py  gui.py  gui_logic.py  i18n.py  preflight.py  qr.py  secrets.py  session.py  tasks_windows.py  totp_hotkey.py
testing/: README.md  sandbox-record.wsb  sandbox-setup.ps1  sandbox.wsb
tests/: test_autostart.py  test_config.py  test_darwin.py  test_factory.py  test_gui_lifecycle.py  test_gui_logic.py  test_gui_themes.py  test_headless.py  test_i18n.py  test_linux.py  test_posix_tray.py  test_preflight.py  test_qr.py  test_session.py  test_tasks_windows.py  test_totp_hotkey.py  test_windows.py
tools/: setup-windows-tasks.ps1
