# ===========================================================================
# pyproject.toml - automatic-openconnect
# ===========================================================================
# Install (git-only for now, no PyPI) — ONE line (PowerShell rejects the bash
# "\" line-continuations):
#
#   uv tool install --with PyQt6 --with "setuptools<70" --with opencv-python-headless --from git+https://github.com/saiko-psych/automatic-openconnect automatic-openconnect
#
# The two --with pins are inherited from the openconnect-sso dependency,
# which is installed separately (it is NOT bundled here).
# ===========================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "automatic-openconnect"
version = "0.1.8"
description = "Cross-platform headless openconnect-sso automation: bring a Cisco AnyConnect compatible VPN up around your code, with login PW + TOTP seed from the OS keyring. Community tool, not supported by uniIT."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "saiko-psych" }]
keywords = ["openconnect", "vpn", "anyconnect", "totp", "keyring", "uni-graz"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
]

dependencies = [
    "keyring>=25.0",
    "pyotp>=2.9",
    "pynput>=1.7",
]

# NOTE: openconnect-sso and PyQt6 are intentionally NOT listed here. They
# are heavyweight and installed out-of-band via `uv tool install --with`.
# This package imports openconnect-sso only by shelling out to the CLI.

[project.optional-dependencies]
dev = ["pytest>=8.0"]
gui = ["PyQt6>=6.5"]
# Optional: decode a TOTP QR-code image at setup. Self-contained wheels on
# Windows (no system deps). Install with: uv tool install --with
# opencv-python-headless ...
qr = ["opencv-python-headless>=4.8"]

[project.gui-scripts]
# Windowed entry point (no console window). Requires the `gui` extra or
# the PyQt6 that openconnect-sso pulls in via `uv tool install --with PyQt6`.
automatic-vpn = "automatic_openconnect.gui:run"

[project.scripts]
# Console-attached variant of the same app, handy for seeing tracebacks.
automatic-vpn-console = "automatic_openconnect.gui:run"

[project.urls]
Homepage = "https://github.com/saiko-psych/automatic-openconnect"
Issues = "https://github.com/saiko-psych/automatic-openconnect/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/automatic_openconnect"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# src-layout: make the package importable for a fresh checkout without
# requiring `pip install -e .` first. CI still installs the package, so
# this only smooths local `pytest` runs.
pythonpath = ["src"]
